<resources>
    <string name="app_name">Text Game</string>
    <string name="player_name">Player Name</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="try_to_reconnect">Disconnected! Trying to reconnect...</string>
    <string name="connecting_to_server">Connecting to server...</string>
    <string name="play">Play</string>
    <string name="logout">LogOut</string>
    <string name="cancel">cancel</string>
    <string name="start_game">Start Game</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send">Send</string>
    <string name="reconnected">Reconnected!</string>
    <string name="player">Player</string>
    <string name="zero">0</string>
    <string name="join_room">Joining room...</string>
    <string name="select_photo">select photo</string>
    <string name="profile">Profile</string>
</resources>
