<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/cv_quiz"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="8dp"-->
<!--        android:visibility="visible"-->
<!--        app:layout_constraintBottom_toTopOf="@id/rvChatLog"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="@id/rvChatLog"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </androidx.cardview.widget.CardView>-->
    <include
        android:id="@+id/cv_quiz"
        layout="@layout/quiz_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/rvChatLog"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChatLog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btnSendMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/llPlayerList"
        app:layout_constraintTop_toBottomOf="@id/cv_quiz"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/llPlayerList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btnSendMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPlayerList"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/layout_anim_fade_in"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            app:stackFromEnd="true"
            tools:visibility="visible" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/sliderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/trans"
        android:rotation="180"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPlayerList"
        app:srcCompat="@drawable/slider_button" />

    <Button
        android:id="@+id/btnSendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:text="@string/send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/enter_your_message"
        android:inputType="textNoSuggestions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMic"
        app:layout_constraintStart_toEndOf="@id/sliderButton"
        app:layout_constraintTop_toBottomOf="@id/rvChatLog" />

    <ImageButton
        android:id="@+id/btnMic"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:background="@color/trans"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@id/btnSendMessage"
        app:layout_constraintEnd_toStartOf="@id/btnSendMessage"
        app:layout_constraintTop_toTopOf="@id/btnSendMessage"
        app:srcCompat="@drawable/ic_mic" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/rvChatLog"
        app:layout_constraintEnd_toEndOf="@id/rvChatLog"
        app:layout_constraintStart_toStartOf="@id/rvChatLog"
        app:layout_constraintTop_toTopOf="@id/rvChatLog" />

</androidx.constraintlayout.widget.ConstraintLayout>